Fixed text block width on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,7 @@ h1,h2{
 	p{
 	font-size: 26px;
 	line-height: 35px;
+	width: 100%;
 	}
 
 
